# teserra

./: .dockerignore  .gitignore  .vercelignore  AGENTS.md  Anchor.toml  BUILD_SEQUENCE.md  Cargo.toml  Dockerfile  README.md  TESSERA_PRD_v2_Engineering.md  TESSERA_PRD_v2_Frontend.md  gaps.md  next.config.ts  package.json  pnpm-lock.yaml  railway.json  tailwind.config.ts  tsconfig.json  tsconfig.test.json  vitest.config.ts
app/: globals.css  layout.tsx  page.tsx
app/agent/: page.tsx
app/employee/: page.tsx
circuits/: CEREMONY.md  income_proof.circom
components/: address-display.tsx  address-input.tsx  amount-display.tsx  amount-input.tsx  credential-viewer-content.tsx  cta-section.tsx  ecosystem-section.tsx  employee-inputs.tsx  footer.tsx  header.tsx  hero-section.tsx  how-it-works.tsx  humans-and-agents.tsx  live-feed-item.tsx  onboarding-modal.tsx  phantom-warning-banner.tsx  progress-with-status.tsx  seal-card-format.ts  seal-card.tsx  status-banner.tsx  stepper.tsx  theme-toggle.tsx  tx-hash-display.tsx  umbra-provider.tsx  wallet-connect-button.tsx  wallet-providers.tsx
hooks/: use-umbra.ts
idl/: tessera.json
lib/: agent-runtime.ts  anchor.ts  constants.ts  motion.ts  proof.ts  types.ts  umbra-deposit.ts  umbra-witness.ts  witness.ts  x402-adapter.ts
programs/tessera/: Cargo.toml  build-verifier-constants.ts
programs/tessera/src/: append_public_inputs.rs  errors.rs  events.rs  init_proof_staging.rs  initialize.rs  lib.rs  state.rs  verifier_constants.rs  verify_credential.rs  verify_income_proof.rs
scripts/: circuit-setup.sh
tests/: tessera.ts
(+76 files in other folders)
