[workspace]
members = ["programs/tessera"]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

# Anchor 0.30.1 ships with cargo 1.79 (via the Solana 1.18.x toolchain).
# Several transitive deps default to versions that require edition2024 (cargo
# 1.85+). Pin the affected crates to last-known versions that still parse on
# 1.79. These overrides only apply to the on-chain build.
[workspace.dependencies]
