[package]
name = "tessera"
version = "0.1.0"
description = "TESSERA — ZK-verified income credentials on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "tessera"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl  = "0.30.1"
groth16-solana = "0.2.0"
mpl-bubblegum  = "2.0.1"
solana-program = "1.18.26"
ark-bn254 = "0.4.0"
ark-serialize = "0.4.0"
ark-ff = "0.4.0"
borsh = "0.10.3"
num-bigint = { version = "0.4", default-features = false }
